# dociium

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  curly.out  curly.yaml  error.out  rust-toolchain.toml  test-version.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
doc_engine/: Cargo.toml
doc_engine/src/: cache.rs  fetcher.rs  finder.rs  html_parser.rs  lib.rs  local.rs  rustdoc.rs  scraper.rs  types.rs
doc_engine/src/processors/: mod.rs  node.rs  python.rs  traits.rs
index_core/: Cargo.toml
index_core/src/: lib.rs  search.rs  traits.rs  types.rs
index_core/tests/: symbol_search_integration_tests.rs  trait_index_integration_tests.rs
mcp_server/: Cargo.toml
mcp_server/src/: lib.rs  main.rs  server.rs  tools.rs
mcp_server/src/doc_engine/: cache.rs  finder.rs  mod.rs
mcp_server/src/index_core/: mod.rs  search.rs  traits.rs
mcp_server/tests/: binary_test.rs  integration_test.rs
prompts/: PYTHON_LIBRARY_ASSISTANT_PROMPT.md  SYSTEM_PROMPT.md
src/: cli_tools.rs  lib.rs  main.rs  server.rs  shared_types.rs
src/doc_engine/: cache.rs  fetcher.rs  finder.rs  local.rs  mod.rs  python_analyzer.rs  python_semantic.rs  scraper.rs  types.rs
src/doc_engine/processors/: mod.rs  node.rs  python.rs  rust.rs
src/index_core/: mod.rs  search.rs  traits.rs
tests/: binary_test.rs  cache_tests.rs  import_resolution_test.rs  integration_test.rs  search_engine_tests.rs
tests/fixtures/mini_math/: Cargo.toml
tests/fixtures/mini_math/src/: lib.rs
