[workspace]
members = ["mcp_server", "doc_engine", "index_core"]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "fs",
    "process",
] }

# Error handling
anyhow = "1.0.98"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "fmt",
] }

# MCP Framework
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }

# JSON Schema
schemars = "0.8"

# Crates.io API
crates_io_api = "0.8"

# Rustdoc types
rustdoc-types = "0.26"

# Search index
tantivy = "0.21"

# Database
rocksdb = "0.22"

# Compression
flate2 = "1.0"

# Hashing
sha2 = "0.10"

# File system utilities
tempfile = "3.8"
walkdir = "2.4"

# Async utilities
futures = "0.3"

# Rate limiting
governor = "0.6"

# Testing
insta = "1.34"
assert_cmd = "2.0"

# Additional dependencies
bincode = "1.3"

# Async utilities
dashmap = "5.5"
lru = "0.12"

# Security
seccompiler = "0.4"

# Rate limiting and concurrency
semaphore = "0.1"

# Observability
opentelemetry = "0.20"
opentelemetry-otlp = "0.13"
prometheus = "0.13"

# HTTP client features
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Tar/gzip handling
tar = "0.4"

# Hex encoding for checksums
hex = "0.4"
