[workspace]
members = ["mcp_server"]
resolver = "2"
default-members = ["mcp_server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/labiium/dociium"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "fs",
    "process",
] }

# Error handling
anyhow = "1.0.98"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "fmt",
] }

# MCP Framework
rmcp = { version = "0.2.0", features = ["server", "transport-io", "macros"] }

# JSON Schema
schemars = "0.8"

# Crates.io API
crates_io_api = "0.8"

# HTML parsing for docs.rs scraping
scraper = "0.19.0"

# Search index
tantivy = "0.21"

# Database
rocksdb = "0.22"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Date and time handling
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }

# Hashing
sha2 = "0.10"

# File system utilities
tempfile = "3.8"
walkdir = "2.4"

# Async utilities
futures = "0.3"

# Rate limiting
governor = "0.6"

# Testing
insta = "1.34"
assert_cmd = "2.0"

# Additional dependencies
bincode = "1.3"

# Async utilities
dashmap = "5.5"
lru = "0.12"

# Security
seccompiler = "0.4"

# Rate limiting and concurrency
semaphore = "0.1"

# Observability
opentelemetry = "0.20"
opentelemetry-otlp = "0.13"
prometheus = "0.13"

# HTTP client features
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Code Parsing & Analysis
prmpt = "0.1"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# Async traits
async-trait = "0.1"

# Tar/gzip handling
tar = "0.4"

# Hex encoding for checksums
hex = "0.4"
