[package]
name = "dociium"
version = "0.1.0"
edition = "2021"
description = "Multi-Language Documentation & Code MCP Server - Fast documentation access for Rust, Python, and Node.js"
license = "MIT OR Apache-2.0"
repository = "https://github.com/labiium/dociium"
readme = "README.md"
keywords = ["mcp", "documentation", "rust", "python", "nodejs"]
categories = ["development-tools", "api-bindings"]
authors = ["Labiium <contact@labiium.com>"]
exclude = ["cache/", "target/", ".github/", "prmpt.out", "prmpt.yaml", "tests/"]

[lib]
name = "dociium"
path = "src/lib.rs"

[[bin]]
name = "dociium"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "fs",
    "process",
] }

# Error handling
anyhow = "1.0.98"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "fmt",
] }

# CLI / UX
clap = { version = "4.5", features = ["derive"] }

# MCP Framework
rmcp = { version = "0.2.0", features = ["server", "transport-io", "macros"] }

# JSON Schema
schemars = "0.8"

# Crates.io API
crates_io_api = "0.8"

# HTML parsing for docs.rs scraping
scraper = "0.19.0"

# Search index and database (optional feature `search-index`)
tantivy = { version = "0.21", optional = true }
# rocksdb integration planned for future release

# Compression
flate2 = "1.0"
# zstd support planned for future release

# Date and time handling
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }

# Hashing
sha2 = "0.10"

# File system utilities
tempfile = "3.8"
walkdir = "2.4"
dirs = "5.0"

# Async utilities
futures = "0.3"

# Rate limiting
governor = "0.6"

# Additional dependencies
bincode = "1.3"

# Async utilities
dashmap = "5.5"
lru = "0.12"

# Additional features planned for future releases
# seccompiler = "0.4"
# semaphore = "0.1"
# opentelemetry = "0.20"
# opentelemetry-otlp = "0.13"
# prometheus = "0.13"

# HTTP client features
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Code Parsing & Analysis
prmpt = "0.1"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# Async traits
async-trait = "0.1"

# Tar/gzip handling
tar = "0.4"

# Hex encoding for checksums
hex = "0.4"

# Additional dependencies from merged crates
regex = "1.10"
semver = "1.0"
url = "2.5"
bytes = "1.5"
rayon = "1.8"
unicode-normalization = "0.1"
fnv = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_cmd = "2.0"
insta = "1.34"

[features]
default = ["stdio"]
stdio = []
websocket = []
dev = ["tokio/tracing"]
network-tests = []
integration-tests = []
# Enable a real search backend (Tantivy) when desired
search-index = ["tantivy"]
