[package]
name = "mcp_server"
version.workspace = true
edition.workspace = true
description = "MCP server for Rust documentation queries"
license.workspace = true
repository.workspace = true

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "dociium"
path = "src/main.rs"


[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
crates_io_api = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }

# Local crates
doc_engine = { path = "../doc_engine" }
index_core = { path = "../index_core" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
assert_cmd = { workspace = true }

[features]
default = ["stdio"]
stdio = []
websocket = []
dev = ["tokio/tracing"]
