[package]
name = "dociium"
version.workspace = true
edition.workspace = true
description = "Multi-Language Documentation & Code MCP Server - Fast documentation access for Rust, Python, and Node.js"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["mcp", "documentation", "rust", "python", "nodejs"]
categories = ["development-tools", "api-bindings"]
authors = ["Labiium <contact@labiium.com>"]

[lib]
name = "dociium"
path = "src/lib.rs"

[[bin]]
name = "dociium"
path = "src/main.rs"


[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
crates_io_api = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }

# Local crates
doc_engine = { path = "../doc_engine", version = "0.1.0" }
index_core = { path = "../index_core", version = "0.1.0" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
assert_cmd = { workspace = true }

[features]
default = ["stdio"]
stdio = []
websocket = []
dev = ["tokio/tracing"]
