[package]
name = "dociium"
version.workspace = true
edition.workspace = true
description = "Multi-Language Documentation & Code MCP Server - Fast documentation access for Rust, Python, and Node.js"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["mcp", "documentation", "rust", "python", "nodejs"]
categories = ["development-tools", "api-bindings"]
authors = ["Labiium <contact@labiium.com>"]

[lib]
name = "dociium"
path = "src/lib.rs"

[[bin]]
name = "dociium"
path = "src/main.rs"


[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
crates_io_api = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }

# Additional dependencies from merged crates
scraper = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }
governor = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
futures = { workspace = true }
prmpt = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tar = "0.4"
regex = "1.10"
semver = "1.0"
url = "2.5"
bytes = "1.5"
lru = { workspace = true }
bincode = { workspace = true }
rayon = "1.8"
unicode-normalization = "0.1"
fnv = "1.0"
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
assert_cmd = { workspace = true }

[features]
default = ["stdio"]
stdio = []
websocket = []
dev = ["tokio/tracing"]
network-tests = []
integration-tests = []
